# OpenLife

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  OPENLIFE_IMPROVEMENT_PLAN.md  README.md  build.rs
<home/andy/openlifeproject/openlife/src/bio/database/: mod.rs
docs/: PRODUCT_DESIGN.md
pharmgx_report/: report.md
skills/ancestry-pca/: SKILL.md
skills/bio-orchestrator/: SKILL.md
skills/equity-scorer/: SKILL.md  equity_scorer.py
skills/lit-synthesizer/: SKILL.md
skills/metagenomics/: SKILL.md  metagenomics_profiler.py
skills/nutrigx-advisor/: SKILL.md  generate_report.py  nutrigx_advisor.py  repro_bundle.py
skills/pharmgx-reporter/: SKILL.md  pharmgx_reporter.py
skills/pharmgx-reporter/tests/: test_pharmgx.py
skills/repro-enforcer/: SKILL.md
skills/scrna-orchestrator/: SKILL.md
skills/semantic-sim/: SKILL.md
skills/seq-wrangler/: SKILL.md
skills/struct-predictor/: SKILL.md
skills/vcf-annotator/: SKILL.md
src/: dashboard.html  error.rs  main.rs
src/bio/: core.rs  mod.rs  orchestrator.rs
src/bio/core/: repro.rs
src/bio/orchestrator/: chain.rs  context.rs  llm.rs  mod.rs  router.rs
src/bio/skill_registry/: executor.rs  loader.rs  mod.rs  registry.rs
src/config/: mod.rs
website/: index.html
