[package]
name = "openlife"
version = "0.1.0"
edition = "2021"
authors = ["OpenLife Team"]
license = "MIT OR Apache-2.0"
description = "ZeroClaw-based Bioinformatics AI Agent"
repository = "https://github.com/openlife-ai/openlife"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.42", features = ["full"] }
directories = "6.0"
toml = "1.0"
serde_yaml = "0.9"

[build-dependencies]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true

[[bin]]
name = "openlife"
path = "src/main.rs"
